UPD: added markup main section.

--- a/index.html
+++ b/index.html
@@ -456,6 +456,12 @@
 
         </div>
 
+        <div class="row page-pagination">
+          <div class="col-md-12 page-pagination__more">
+            <a href="#">Load more...</a>
+          </div>
+        </div>
+
       </main>
 
     </div>
