UPD: added markup footer section.

--- a/index.html
+++ b/index.html
@@ -563,6 +563,16 @@
     </div>
   </div>
 
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 page-footer__copyright">
+          <span>@ Copyright 2018</span>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/popper.js/dist/umd/popper.min.js"></script>
