--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -182,19 +182,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$1250 <sup>99</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -218,19 +218,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -254,19 +254,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -290,19 +290,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$1250 <sup>99</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -326,19 +326,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -362,19 +362,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -398,19 +398,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$1250 <sup>99</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -434,19 +434,19 @@
                   <span><strong>RAM:</strong> 1 GB</span>
                 </div>
                 <div class="item-buttons">
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
-                  <button class="btn btn-outline-success">
+                  <button class="btn btn-outline-success my-2 my-sm-0">
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-block btn-outline-success item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-block btn-outline-success   item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0  item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
