UPD: added cart counter.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <div class="row page-content content-grid">
+        <div id="content-container" class="row page-content content-grid">
 
           <div class="col-md-4 content-item">
             <div class="item-wrapper">
